--- a/package.json
+++ b/package.json
@@ -10,33 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.6",
+    "@emailjs/browser": "^4.1.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
     "@tailwindcss/vite": "^4.0.6",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^12.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "framer-motion": "^11.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
-    "react-icons": "^5.4.0",
-    "react-router-dom": "^7.2.0",
-    "react-slick": "^0.30.3",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.1",
+    "react-slick": "^0.30.1",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "daisyui": "^5.0.0-beta.8",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "daisyui": "^4.7.2",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "postcss": "^8.4.35",
+    "vite": "^5.1.3"
   }
 }
